Corrections and stuffs

--- a/sections/Analyse/SystemDescription/Conclusion.tex
+++ b/sections/Analyse/SystemDescription/Conclusion.tex
@@ -1,19 +1,19 @@
 \section{Conclusion}\label{EmbConc}
 
-Throughout this chapter the basic concepts of each aspect of the system have
+Throughout this chapter, the basic concepts of each aspect of the system have
 been explained. As such, this section will be used to conclude on how these
 different aspects can be used in relation to the \name system.
 
 \begin{itemize}
   \item The constraints for this semester requires the developed product to be
-  an embedded system, which implies that we need to take the hardware
-  constraints into consideration and design it for this specific task. This
-  requirement is fulfilled by using a hardware platform such as Arduino or Lego
-  NXT, since the platforms are restricted on the basis of computing power, size
-  and memory.
+  an embedded system, which implies that we need to take the
+  hardware constraints into account and design according these limitations.
+  This requirement is fulfilled by using a hardware platform such as the Arduino or
+  the LEGO Mindstorms NXT, since the platforms are restricted on the basis of
+  computing power, size and memory.
   \item Using a belief network with an underlying HMM allows \name to have a
   model that can be populated with observations from the sensors. This allows
-  the turret to try and predict the future position of target based on the
+  the turret to try and predict the future position of the target based on the
   observations.
   \item \name can be considered a firm real-time system, as once certain
   deadlines have passed, for instance when firing, the information becomes
@@ -22,7 +22,7 @@ different aspects can be used in relation to the \name system.
 
 With the system analysed, it is now possible to determine how we ensure that
 the turret will actually hit the target. An important part of this consists of
-being able to accurately calculate the projectiles trajectory, which will be
+being able to accurately calculate the projectile's trajectory, which will be
 addressed in the following chapter.
 
 
